--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
       </div>
     </section>
 
-    <!--    <section>blabla</section>-->
     <section class="firstSlide">
       <div class="container">
         <div class="pregnantSection">
@@ -97,7 +96,6 @@
                 <img
                   src="./assets/images/mainPage/firstSlide/firstSlide.png"
                   alt=""
-                  class="pregnantSection__main__left__image"
                 />
               </div>
             </div>
@@ -141,6 +139,120 @@
                   class="pregnantSection__main__questionBlock pinkBackground"
                 >
                   <p>Как рассказать о своей беременности?</p>
+                  <img
+                    src="./assets/images/mainPage/firstSlide/arrow.png"
+                    alt=""
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="secondSlide">
+      <div class="container">
+        <div class="pregnantSection">
+          <div class="pregnantSection__main">
+            <div class="pregnantSection__main__left">
+              <p>- Что мне делать?</p>
+              <div class="pregnantSection__main__left__image">
+                <img
+                  src="./assets/images/mainPage/secondSlide/secondSlideimage.png"
+                  alt=""
+                />
+              </div>
+            </div>
+
+            <div class="pregnantSection__main__right">
+              <div class="pregnantSection__main__right__column">
+                <a
+                  href="#"
+                  class="secondSlide__main__questionBlock firstBackground"
+                >
+                  <p>Как себя вести во время беременности?</p>
+                </a>
+                <a
+                  href="#"
+                  class="secondSlide__main__questionBlock thirdBackground"
+                >
+                  <p>Советы психолога</p>
+                </a>
+              </div>
+              <div class="pregnantSection__main__right__column">
+                <a
+                  href="#"
+                  class="secondSlide__main__questionBlock secondBackground"
+                >
+                  <p>Ответы врача</p>
+                </a>
+                <a
+                  href="#"
+                  class="secondSlide__main__questionBlock fourthBackground"
+                >
+                  <p>Незапланированная беременность Что делать?</p>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="thirdSlide">
+      <div class="container">
+        <div class="pregnantSection">
+          <div class="pregnantSection__main">
+            <div class="pregnantSection__main__left">
+              <p>- У меня трудности</p>
+              <div class="pregnantSection__main__left__image">
+                <img
+                  src="./assets/images/mainPage/thirdSlide/thirdSlide.png"
+                  alt=""
+                />
+              </div>
+            </div>
+
+            <div class="pregnantSection__main__right">
+              <div class="pregnantSection__main__right__column">
+                <a
+                  href="#"
+                  class="pregnantSection__main__questionBlock blueBackGround"
+                >
+                  <p>Статьи-ответы на проблемные вопросы</p>
+                  <img
+                    src="./assets/images/mainPage/firstSlide/arrow.png"
+                    alt=""
+                  />
+                </a>
+                <a
+                  href="#"
+                  class="pregnantSection__main__questionBlock pinkBackground"
+                >
+                  <p>Статьи-ответы на проблемные вопросы</p>
+                  <img
+                    src="./assets/images/mainPage/firstSlide/arrow.png"
+                    alt=""
+                  />
+                </a>
+              </div>
+              <div class="pregnantSection__main__right__column">
+                <a
+                  href="#"
+                  class="pregnantSection__main__questionBlock whiteBackGround"
+                >
+                  <p>Куда обратиться за помощью?</p>
+                  <img
+                    src="./assets/images/mainPage/firstSlide/arrow.png"
+                    alt=""
+                  />
+                </a>
+                <a
+                  href="#"
+                  class="pregnantSection__main__questionBlock greyBackGround"
+                >
+                  <p>Куда обратиться за помощью?</p>
                   <img
                     src="./assets/images/mainPage/firstSlide/arrow.png"
                     alt=""
