--- a/index.html
+++ b/index.html
@@ -265,20 +265,173 @@
       </div>
     </section>
 
-    <script>
-      const header = document.getElementById("rightHeader");
-      header.addEventListener("scroll", () => {
-        console.log("hi");
-      });
+    <section class="sliderBack">
+      <div class="container">
+        <div class="sliderBlock">
+          <div class="sliderBlock__title">Истории из жизни</div>
+          <div class="sliderBlock__slider" id="style-2">
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage1"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Маша</div>
+              <div class="sliderBlock__slider__slide__age">20 лет</div>
+              <div class="sliderBlock__slider__slide__city">Москва</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Маша...
+              </div>
+            </div>
 
-      window.addEventListener("scroll", () =>
-        window.scrollY === 0 ? header.classList.add("homeMenu") : null
-      );
-      window.addEventListener("scroll", () =>
-        header.classList.contains("homeMenu") && window.scrollY !== 0
-          ? header.classList.remove("homeMenu")
-          : null
-      );
-    </script>
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage2"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Ирина</div>
+              <div class="sliderBlock__slider__slide__age">26 лет</div>
+              <div class="sliderBlock__slider__slide__city">Саратов</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Ирина...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage3"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Диана</div>
+              <div class="sliderBlock__slider__slide__age">21 год</div>
+              <div class="sliderBlock__slider__slide__city">
+                Королев <br />
+                МО
+              </div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Диана...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage4"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Даша</div>
+              <div class="sliderBlock__slider__slide__age">16 лет</div>
+              <div class="sliderBlock__slider__slide__city">Москва</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Даша...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage1"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Маша</div>
+              <div class="sliderBlock__slider__slide__age">20 лет</div>
+              <div class="sliderBlock__slider__slide__city">Москва</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Маша...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage2"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Ирина</div>
+              <div class="sliderBlock__slider__slide__age">26 лет</div>
+              <div class="sliderBlock__slider__slide__city">Саратов</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Ирина...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage3"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Диана</div>
+              <div class="sliderBlock__slider__slide__age">21 год</div>
+              <div class="sliderBlock__slider__slide__city">
+                Королев <br />
+                МО
+              </div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Диана...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage4"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Даша</div>
+              <div class="sliderBlock__slider__slide__age">16 лет</div>
+              <div class="sliderBlock__slider__slide__city">Москва</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Даша...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage1"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Маша</div>
+              <div class="sliderBlock__slider__slide__age">20 лет</div>
+              <div class="sliderBlock__slider__slide__city">Москва</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Маша...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage2"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Ирина</div>
+              <div class="sliderBlock__slider__slide__age">26 лет</div>
+              <div class="sliderBlock__slider__slide__city">Саратов</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Ирина...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage3"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Диана</div>
+              <div class="sliderBlock__slider__slide__age">21 год</div>
+              <div class="sliderBlock__slider__slide__city">
+                Королев <br />
+                МО
+              </div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Диана...
+              </div>
+            </div>
+
+            <div class="sliderBlock__slider__slide">
+              <div
+                class="sliderBlock__slider__slide__image backGroundImage4"
+              ></div>
+              <div class="sliderBlock__slider__slide__name">Даша</div>
+              <div class="sliderBlock__slider__slide__age">16 лет</div>
+              <div class="sliderBlock__slider__slide__city">Москва</div>
+              <div class="sliderBlock__slider__slide__text">
+                “Привет, меня зовут Даша...
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="actualBack">
+      <div class="container">
+
+      </div>
+    </section>
+    <script src="./assets/js/mainPage/index.js"></script>
   </body>
 </html>
