--- a/index.html
+++ b/index.html
@@ -427,9 +427,36 @@
       </div>
     </section>
 
-    <section class="actualBack">
+    <section class="actualBlock">
       <div class="container">
-
+        <div class="actualBlock__wrapper">
+          <div class="actualBlock__title">Актуальное</div>
+          <div class="actualBlock__main">
+            <div class="actualBlock__main__left">
+              <div class="actualBlock__main__image">
+                <img src="./assets/images/mainPage/actual/image.png" alt="" />
+              </div>
+            </div>
+            <div class="actualBlock__main__right">
+              <div class="actualBlock__main__row">
+                <div class="actualBlock__main__questionBlock">
+                  <p>Статьи-ответы на проблемные вопросы</p>
+                </div>
+                <div class="actualBlock__main__questionBlock">
+                  <p>Куда обратиться за помощью</p>
+                </div>
+              </div>
+              <div class="actualBlock__main__row">
+                <div class="actualBlock__main__questionBlock">
+                  <p>Статьи-ответы на проблемные вопросы</p>
+                </div>
+                <div class="actualBlock__main__questionBlock">
+                  <p>Хочу это закончить</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
     <script src="./assets/js/mainPage/index.js"></script>
