--- a/about.html
+++ b/about.html
@@ -43,11 +43,11 @@
 
 
     <!-- style -->
-    <link rel="stylesheet" href="assets/css/styleAbout.css">
-    <link rel="stylesheet" href="assets/css/all.css">
-    <link rel="stylesheet" href="assets/css/ComponentContact.css">
-    <link rel="stylesheet" href="assets/css/baner.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/about/styleAbout.css">
+    <link rel="stylesheet" href="assets/css/about/all.css">
+    <link rel="stylesheet" href="assets/css/about/ComponentContact.css">
+    <link rel="stylesheet" href="assets/css/about/baner.css">
+    <link rel="stylesheet" href="assets/css/about/footer.css">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/logo.svg">
@@ -384,7 +384,7 @@
 
 
     <!-- scripts -->
-    <script src="assets/js/component_baner.js"></script>
+    <script src="assets/js/about/component_baner.js"></script>
 
 </body>
 
