--- a/help.html
+++ b/help.html
@@ -39,10 +39,10 @@
 
 
     <!-- style -->
-    <link rel="stylesheet" href="assets/css/help.css">
-    <link rel="stylesheet" href="assets/css/all.css">
-    <link rel="stylesheet" href="assets/css/ComponentContact.css">
-    <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="stylesheet" href="assets/css/about/help.css">
+    <link rel="stylesheet" href="assets/css/about/all.css">
+    <link rel="stylesheet" href="assets/css/about/ComponentContact.css">
+    <link rel="stylesheet" href="assets/css/about/footer.css">
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/logo.svg">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/icons/logo.svg">
