--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -441,19 +446,112 @@
               <div class="actualBlock__main__row">
                 <div class="actualBlock__main__questionBlock">
                   <p>Статьи-ответы на проблемные вопросы</p>
+                  <div class="actualBlock__main__questionBlock__row">
+                    <p>01.12.2020</p>
+                    <img
+                      src="./assets/images/mainPage/actual/Arrow.png"
+                      alt=""
+                    />
+                  </div>
                 </div>
                 <div class="actualBlock__main__questionBlock">
                   <p>Куда обратиться за помощью</p>
+                  <div class="actualBlock__main__questionBlock__row">
+                    <p>01.12.2020</p>
+                    <img
+                      src="./assets/images/mainPage/actual/Arrow.png"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </div>
               <div class="actualBlock__main__row">
                 <div class="actualBlock__main__questionBlock">
                   <p>Статьи-ответы на проблемные вопросы</p>
+                  <div class="actualBlock__main__questionBlock__row">
+                    <p>01.12.2020</p>
+                    <img
+                      src="./assets/images/mainPage/actual/Arrow.png"
+                      alt=""
+                    />
+                  </div>
                 </div>
                 <div class="actualBlock__main__questionBlock">
                   <p>Хочу это закончить</p>
+                  <div class="actualBlock__main__questionBlock__row">
+                    <p>01.12.2020</p>
+                    <img
+                      src="./assets/images/mainPage/actual/Arrow.png"
+                      alt=""
+                    />
+                  </div>
                 </div>
               </div>
+            </div>
+          </div>
+          <div class="advice">— Советы молодым мамам</div>
+
+          <div class="actualBlock__sliders">
+            <div class="actualBlock__sliders__slide">
+              <p>Купите подушку для беременных</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Тщательно планируйте выбор коляски</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Ведите дневник беременности</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Средства от отеков</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Купите подушку для беременных</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Тщательно планируйте выбор коляски</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Ведите дневник беременности</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Средства от отеков</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Купите подушку для беременных</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Тщательно планируйте выбор коляски</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Ведите дневник беременности</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Средства от отеков</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Купите подушку для беременных</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Тщательно планируйте выбор коляски</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Ведите дневник беременности</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Средства от отеков</p>
+            </div>
+
+            <div class="actualBlock__sliders__slide">
+              <p>Купите подушку для беременных</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Тщательно планируйте выбор коляски</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Ведите дневник беременности</p>
+            </div>
+            <div class="actualBlock__sliders__slide">
+              <p>Средства от отеков</p>
             </div>
           </div>
         </div>
