add smooth scroll

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
     <link rel="stylesheet" href="assets/css/about/all.css">
     <link rel="stylesheet" href="assets/css/about/ComponentContact.css">
     <link rel="stylesheet" href="assets/css/about/baner.css">
-    <link rel="stylesheet" href="assets/css/about/footer.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/icons/logo.svg">
