--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./assets/css/header.css" />
   </head>
 
   <body>
@@ -41,10 +42,10 @@
 
         <div class="header__right homeMenu" id="rightHeader">
           <nav class="navLinks">
-            <a href="#">Для женщин</a>
-            <a href="#">Для специалистов</a>
-            <a href="#">Для каждого</a>
-            <a href="#">О проекте</a>
+            <a href="#" class="link">Для женщин</a>
+            <a href="#" class="link">Для специалистов</a>
+            <a href="#" class="link">Для каждого</a>
+            <a href="#" class="link">О проекте</a>
           </nav>
           <div class="sandwich">
             <img src="assets/images/mainPage/Sandwich.png" alt="" />
