add images animation

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
             </div>
           </div>
           <div class="homePage__content__main">
-            <div class="homePage__content__main__image">
+            <div
+              class="homePage__content__main__image _anim-items _anim-no-hide"
+            >
               <img src="assets/images/mainPage/HomePageImage.png" alt="" />
             </div>
 
@@ -98,7 +100,7 @@
           <div class="pregnantSection__main">
             <div class="pregnantSection__main__left">
               <p>- Я беременна?</p>
-              <div class="pregnantSection__main__left__image">
+              <div class="pregnantSection__main__left__image _anim-items">
                 <img
                   src="./assets/images/mainPage/firstSlide/firstSlide.png"
                   alt=""
@@ -163,7 +165,7 @@
           <div class="pregnantSection__main">
             <div class="pregnantSection__main__left">
               <p>- Что мне делать?</p>
-              <div class="pregnantSection__main__left__image">
+              <div class="pregnantSection__main__left__image _anim-items">
                 <img
                   src="./assets/images/mainPage/secondSlide/secondSlideimage.png"
                   alt=""
@@ -212,7 +214,7 @@
           <div class="pregnantSection__main">
             <div class="pregnantSection__main__left">
               <p>- У меня трудности</p>
-              <div class="pregnantSection__main__left__image">
+              <div class="pregnantSection__main__left__image _anim-items">
                 <img
                   src="./assets/images/mainPage/thirdSlide/thirdSlide.png"
                   alt=""
@@ -439,7 +441,7 @@
           <div class="actualBlock__title">Актуальное</div>
           <div class="actualBlock__main">
             <div class="actualBlock__main__left">
-              <div class="actualBlock__main__image">
+              <div class="actualBlock__main__image _anim-items">
                 <img src="./assets/images/mainPage/actual/image.png" alt="" />
               </div>
             </div>
