--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </div>
         </div>
 
-        <div class="header__right homeMenu" id="rightHeader">
+        <div class="header__right homeMenu _anim-items" id="rightHeader">
           <nav class="navLinks">
             <a href="#" class="link">Для женщин</a>
             <a href="#" class="link">Для специалистов</a>
@@ -59,7 +59,7 @@
           <div class="homePage__content__header">
             <div class="homePage__content__header__left"></div>
             <div class="homePage__content__header__right">
-              <div class="homePage__content__header__right__text">
+              <div class="homePage__content__header__right__text _anim-items">
                 <p>Информационный портал Плюс один</p>
               </div>
             </div>
@@ -447,7 +447,10 @@
             </div>
             <div class="actualBlock__main__right">
               <div class="actualBlock__main__row">
-                <div class="actualBlock__main__questionBlock">
+                <div
+                  class="actualBlock__main__questionBlock"
+                  style="margin-right: 14px"
+                >
                   <p>Статьи-ответы на проблемные вопросы</p>
                   <div class="actualBlock__main__questionBlock__row">
                     <p>01.12.2020</p>
@@ -469,7 +472,10 @@
                 </div>
               </div>
               <div class="actualBlock__main__row">
-                <div class="actualBlock__main__questionBlock">
+                <div
+                  class="actualBlock__main__questionBlock"
+                  style="margin-right: 14px"
+                >
                   <p>Статьи-ответы на проблемные вопросы</p>
                   <div class="actualBlock__main__questionBlock__row">
                     <p>01.12.2020</p>
