fix history page

--- a/index.html
+++ b/index.html
@@ -712,5 +712,6 @@
 
 
     <script src="./assets/js/mainPage/index.js"></script>
+    <script src="./assets/js/mainPage/storyScroll.js"></script>
   </body>
 </html>
