--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/icons/logo.svg">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/icons/logo.svg">
     <link rel="mask-icon" href="./assets/icons/logo.svg" color="#3654E9">
-    <title>MainPAge</title>
+    <title>Главная страница</title>
 </head>
 
 
