--- a/trabls.html
+++ b/trabls.html
@@ -270,8 +270,7 @@
     </div>
 
 
-
-    <div class="wrapperFooter___Trable">
+    <div class="wrapperFooter">
         <footer id="footer">
             <div class="itemFooter">
                 <div>
